[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref = "0.3.6"
generic-array = "0.14.6"
encoding = "0.2.33"
hex = "0.4.3"
bigint = "4.4.3"
elliptic-curve = "0.12.3"
#sha3 = "0.9.1"
k256 = "0.11.6"
libsecp256k1 = "0.7.1"
#blst = "0.3.3"
#bls-signatures = "0.9.0"
#forest_address = "0.3.2"
#forest_crypto = "0.5.3"
#crypto = "0.4.0"
rust-crypto = "0.2.36"
#fastcrypto = "0.1.4"
serde = "1.0.152"
serde_json = "1.0.91"
##
#web3 = "0.18.0"