[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref = "0.3.6"
generic-array = "0.14.6"
base64 = "0.21.0"
bs58 = "0.4.0"
bech32 = "0.9.1"
encoding = "0.2.33"
hex = "0.4.3"
bigint = "4.4.3"

# num-bigint = { version = "0.4.3", features = ["num-bigint"] }
# yasna = "0.5.1"
elliptic-curve = "0.12.3"
jsonwebtoken = "8.2.0"
jsonwebkey = { version = "0.3.5", features = ["pkcs-convert"] }
k256 = "0.11.6"
libsecp256k1 = "0.7.1"
schnorrkel = "0.10.2"
#blst = "0.3.3"
#bls-signatures = "0.9.0"
#forest_address = "0.3.2"
#forest_crypto = "0.5.3"
#crypto = "0.4.0"
pkcs1 = { version = "0.2.4", features = ["alloc", "pem"] }
rust-crypto = "0.2.36"
rsa = "0.8.1"
serde = "1.0.152"
serde_json = "1.0.91"
##
#web3 = "0.18.0"


[dev-dependencies]
quickcheck = "1.0.3"